--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "messenger palindrome bot",
   "main": "index.js",
- "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -20,7 +21,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "googleapis": "^39.2.0",
-    "mongoose": "^5.7.7",
+    "mongoose": "^5.7.12",
     "request": "^2.88.0"
   }
 }
